--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--HTML DOM-->
-    <h1>To Do List</h1>
+    <h1>Kryptocamp-To Do List</h1>
     <div class="container">
         <div id="task">
             <h3>New Task</h3>
